--- a/client/src/components/ui/Modal/Modal.module.scss
+++ b/client/src/components/ui/Modal/Modal.module.scss
@@ -18,26 +18,36 @@
   z-index: 1050;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
   outline: 0;
   .modal {
     z-index: 100;
     background: white;
     position: relative;
+    overflow: hidden;
     margin: 1em auto;
     border-radius: 3rem;
     max-width: 70%;
-    padding: 2em;
+    @include mx.sm {
+      max-width: 90%;
+    }
     display: flex;
-    flex-direction: column;
-    gap: 1em;
-    .modalHeader {
+    height: calc(100% - 2em);
+    .modalContent {
       display: flex;
-      justify-content: flex-end;
-      @include mx.md {
-        button {
-          padding: 1em 2em;
+      flex-direction: column;
+      padding: 2em;
+      gap: 1em;
+      width: 100%;
+      height: 100%;
+      overflow-y: auto;
+      box-sizing: border-box;
+      .modalHeader {
+        display: flex;
+        justify-content: flex-end;
+        @include mx.md {
+          button {
+            padding: 1em 2em;
+          }
         }
       }
     }
