--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,6 @@
+@use "./variables" as vars;
+@use "./mixins" as mx;
+
 html,
 body,
 div,
@@ -83,4 +86,18 @@ html {
 }
 body {
   font-size: 1.6rem;
+}
+
+*::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: vars.$dark_blue;
+  border-radius: 3rem;
+  // outline: 10px solid green;
 }
